Updated package.json and fixed deployment issues

--- a/conference-ticket-generator/package.json
+++ b/conference-ticket-generator/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://Belloyb.github.io/hngx-stage2-ConferenceTicketGenerator" ,
   "name": "conference-ticket-generator",
   "version": "0.1.0",
   "private": true,
@@ -12,7 +13,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
